@@ -31,55 +31,7 @@
 #include "api/ofo-account.h"
 #include "api/ofs-account-balance.h"
 
-static gint account_balance_cmp( const ofsAccountBalance *a, const ofsAccountBalance *b );
 static void account_balance_free( ofsAccountBalance *balance );
-
-/**
- * ofs_account_balance_list_add
- */
-void
-ofs_account_balance_list_add( GList **list, const ofoAccount *account )
-{
-	ofsAccountBalance *balance;
-
-	balance = g_new0( ofsAccountBalance, 1 );
-	balance->account = g_strdup( ofo_account_get_number( account ));
-	balance->debit = 0;
-	balance->credit = 0;
-	balance->currency = g_strdup( ofo_account_get_currency( account ));
-
-	*list = g_list_insert_sorted( *list, balance, ( GCompareFunc ) account_balance_cmp );
-}
-
-static gint
-account_balance_cmp( const ofsAccountBalance *a, const ofsAccountBalance *b )
-{
-	return( g_utf8_collate( a->account, b->account ));
-}
-
-/**
- * ofs_account_balance_list_find:
- */
-gboolean
-ofs_account_balance_list_find( const GList *dataset, const gchar *number )
-{
-	const GList *it;
-	ofsAccountBalance *balance;
-	gint cmp;
-
-	for( it=dataset ; it ; it=it->next ){
-		balance = ( ofsAccountBalance * ) it->data;
-		cmp = g_utf8_collate( number, balance->account );
-		if( cmp == 0 ){
-			return( TRUE );
-		}
-		if( cmp < 0 ){
-			return( FALSE );
-		}
-	}
-
-	return( FALSE );
-}
 
 /**
  * ofs_account_balance_list_free:
