@@ -73,6 +73,7 @@
    - ofaIAccountFilter: remove ofa_iaccount_filter_set_prefs() unused method.
    - ofaIDateFilter: ofa_idate_filter_set_prefs() renamed to ofa_idate_filter_set_settings_key() (todo #1220).
    - ofaLedgerArcTreeview, ofaLedgerArcStore: new classes.
+   - ofsAccountBalance: remove unused API (todo #1224).
 
 -----------------------------------------------------------------------
  Version 0.60
